--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
     background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=5);
     background-size: cover;
-    font-family: 'helvetica neue';
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 10px;
   }
@@ -104,5 +104,5 @@ html {
     padding-left: 5px;
     padding-right: 5px;
     font-size: 15px;
-    color: rgb(201, 199, 199);
+    color: rgb(201, 198, 198);
   }
